--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-Flask==0.12.2
-
-pymessenger==0.0.7.0
-
-gunicorn==19.6.0
+chatterbot-corpus>=1.1,<1.2
+mathparse>=0.1,<0.2
+nltk>=3.2,<4.0
+pymongo>=3.3,<4.0
+python-dateutil>=2.6,<2.7
+python-twitter>=3.0,<4.0
+sqlalchemy>=1.2,<1.3
+py==1.4.29
+pytest==3.0.2
+requests==2.7.0
+six==1.9.0
+wheel==0.24.0
